common and serv-0 refactor.